# qtapp

./: .gitignore  CMakeLists.txt  QtApp.sln  README.md
QtApp/: CMakeLists.txt  ClassDiagram.cd  P_1327G.cpp  P_1327G.ixx  P_1327G_v2.h  P_1442E.h  P_1446E.h  Pattern_Command.h  QtApp.cpp  QtApp.h  QtApp.ui  QtApp.vcxproj  QtApp.vcxproj.filters  QtHeaders.h  QtTablet.cpp  QtTablet.h  RayTracing.h  SettingsDialog.cpp  SettingsDialog.h  Tensor.h  TypeErasure.h  cpp.hint  main.cpp  stdafx.cpp  stdafx.h
TensorFlux/: Input.hpp  Perceptron.h  Perceptron.hpp  Warp.hpp
TensorModule/: Perceptron.ixx
cmake/: config.h.cin
docs/: MITLicense.md  compiler_options.md  mathsymbols.md  styleguide.md
include/: CMakeLists.txt  QtHeaders.h  common.h  cuda_wrappers.cpp  derma_byte.h  derma_enum.h  derma_enum_free.h  derma_strongtype.h  derma_vector.h  os_native.h  os_unix.h  os_windows.h  random.h  std_nomodules.h  stdafx.h
problems/: P_1327G.cc  P_1327G.cpp  P_1327G.h  P_1327G_v2.h  Pattern_Command.h  deh_context.h  keybinds.h  test_main.cpp
tests/: CMakeLists.txt  cpp.hint  tests.cpp  tests.h  tests_a.cpp  tests_b.cpp  tests_byte.cpp  tests_perceptron.cpp
utest/: catch.hpp  cpp.hint  stdafx.cpp  stdafx.h  test_main.cpp  utest.vcxproj  utest.vcxproj.filters
utest/x64/Debug/: utest.exe.recipe
utest/x64/Debug/utest.tlog/: utest.lastbuildstate
